@@ -1,115 +1,0 @@
-libfarstream-0.1.so.0 libfarstream-0.1-0 #MINVER#
- fs_candidate_copy@Base 0.1.1
- fs_candidate_destroy@Base 0.1.1
- fs_candidate_get_type@Base 0.1.1
- fs_candidate_list_copy@Base 0.1.1
- fs_candidate_list_destroy@Base 0.1.1
- fs_candidate_list_get_type@Base 0.1.1
- fs_candidate_new@Base 0.1.1
- fs_candidate_type_get_type@Base 0.1.1
- fs_codec_add_feedback_parameter@Base 0.1.1
- fs_codec_add_optional_parameter@Base 0.1.1
- fs_codec_are_equal@Base 0.1.1
- fs_codec_copy@Base 0.1.1
- fs_codec_destroy@Base 0.1.1
- fs_codec_get_feedback_parameter@Base 0.1.1
- fs_codec_get_optional_parameter@Base 0.1.1
- fs_codec_get_type@Base 0.1.1
- fs_codec_list_are_equal@Base 0.1.1
- fs_codec_list_copy@Base 0.1.1
- fs_codec_list_destroy@Base 0.1.1
- fs_codec_list_from_keyfile@Base 0.1.1
- fs_codec_list_get_type@Base 0.1.1
- fs_codec_new@Base 0.1.1
- fs_codec_parameter_copy@Base 0.1.1
- fs_codec_parameter_free@Base 0.1.1
- fs_codec_parameter_get_type@Base 0.1.1
- fs_codec_remove_feedback_parameter@Base 0.1.1
- fs_codec_remove_optional_parameter@Base 0.1.1
- fs_codec_to_string@Base 0.1.1
- fs_component_type_get_type@Base 0.1.1
- fs_conference_debug@Base 0.1.1
- fs_conference_get_type@Base 0.1.1
- fs_conference_new_participant@Base 0.1.1
- fs_conference_new_session@Base 0.1.1
- fs_dtmf_event_get_type@Base 0.1.1
- fs_dtmf_method_get_type@Base 0.1.1
- fs_element_added_notifier_add@Base 0.1.1
- fs_element_added_notifier_get_type@Base 0.1.1
- fs_element_added_notifier_new@Base 0.1.1
- fs_element_added_notifier_remove@Base 0.1.1
- fs_element_added_notifier_set_default_properties@Base 0.1.1
- fs_element_added_notifier_set_properties_from_file@Base 0.1.1
- fs_element_added_notifier_set_properties_from_keyfile@Base 0.1.1
- fs_error_get_type@Base 0.1.1
- fs_error_quark@Base 0.1.1
- fs_feedback_parameter_copy@Base 0.1.1
- fs_feedback_parameter_free@Base 0.1.1
- fs_feedback_parameter_get_type@Base 0.1.1
- fs_media_type_get_type@Base 0.1.1
- fs_media_type_to_string@Base 0.1.1
- fs_network_protocol_get_type@Base 0.1.1
- fs_parse_error@Base 0.1.1
- fs_participant_get_type@Base 0.1.1
- fs_plugin_create@Base 0.1.1
- fs_plugin_create_valist@Base 0.1.1
- fs_plugin_get_type@Base 0.1.1
- fs_plugin_list_available@Base 0.1.1
- fs_rtp_header_extension_are_equal@Base 0.1.1
- fs_rtp_header_extension_copy@Base 0.1.1
- fs_rtp_header_extension_destroy@Base 0.1.1
- fs_rtp_header_extension_get_type@Base 0.1.1
- fs_rtp_header_extension_list_copy@Base 0.1.1
- fs_rtp_header_extension_list_destroy@Base 0.1.1
- fs_rtp_header_extension_list_from_keyfile@Base 0.1.1
- fs_rtp_header_extension_list_get_type@Base 0.1.1
- fs_rtp_header_extension_new@Base 0.1.1
- fs_session_codecs_need_resend@Base 0.1.1
- fs_session_destroy@Base 0.1.1
- fs_session_emit_error@Base 0.1.1
- fs_session_get_stream_transmitter_type@Base 0.1.1
- fs_session_get_type@Base 0.1.1
- fs_session_list_transmitters@Base 0.1.1
- fs_session_new_stream@Base 0.1.1
- fs_session_parse_codecs_changed@Base 0.1.1
- fs_session_parse_send_codec_changed@Base 0.1.1
- fs_session_parse_telephony_event_started@Base 0.1.1
- fs_session_parse_telephony_event_stopped@Base 0.1.1
- fs_session_set_codec_preferences@Base 0.1.1
- fs_session_set_send_codec@Base 0.1.1
- fs_session_start_telephony_event@Base 0.1.1
- fs_session_stop_telephony_event@Base 0.1.1
- fs_stream_add_id@Base 0.1.1
- fs_stream_add_remote_candidates@Base 0.1.1
- fs_stream_destroy@Base 0.1.1
- fs_stream_direction_get_type@Base 0.1.1
- fs_stream_emit_error@Base 0.1.1
- fs_stream_emit_src_pad_added@Base 0.1.1
- fs_stream_force_remote_candidates@Base 0.1.1
- fs_stream_get_type@Base 0.1.1
- fs_stream_iterate_src_pads@Base 0.1.1
- fs_stream_parse_component_state_changed@Base 0.1.1
- fs_stream_parse_local_candidates_prepared@Base 0.1.1
- fs_stream_parse_new_active_candidate_pair@Base 0.1.1
- fs_stream_parse_new_local_candidate@Base 0.1.1
- fs_stream_parse_recv_codecs_changed@Base 0.1.1
- fs_stream_set_remote_codecs@Base 0.1.1
- fs_stream_set_transmitter@Base 0.1.1
- fs_stream_state_get_type@Base 0.1.1
- fs_stream_transmitter_add_remote_candidates@Base 0.1.1
- fs_stream_transmitter_emit_error@Base 0.1.1
- fs_stream_transmitter_force_remote_candidates@Base 0.1.1
- fs_stream_transmitter_gather_local_candidates@Base 0.1.1
- fs_stream_transmitter_get_type@Base 0.1.1
- fs_stream_transmitter_stop@Base 0.1.1
- fs_transmitter_emit_error@Base 0.1.1
- fs_transmitter_get_recvonly_filter@Base 0.1.1
- fs_transmitter_get_stream_transmitter_type@Base 0.1.1
- fs_transmitter_get_type@Base 0.1.1
- fs_transmitter_list_available@Base 0.1.1
- fs_transmitter_new@Base 0.1.1
- fs_transmitter_new_stream_transmitter@Base 0.1.1
- fs_utils_get_default_codec_preferences@Base 0.1.1
- fs_utils_get_default_element_properties@Base 0.1.1
- fs_utils_get_default_rtp_header_extension_preferences@Base 0.1.1
- fs_utils_set_bitrate@Base 0.1.1
