@@ -1,1 +1,0 @@
-debian/tmp/usr/lib/python*/*-packages/farstream.so
